<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zlei.checkInTool.CheckInActivity">

    <Button
        android:id="@+id/check_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in_foursquare"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp" />

    <TextView
        android:id="@+id/venue_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/venue_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/venue_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/venue_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/venue_id" />

    <TextView
        android:id="@+id/venue_major"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/venue_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/venue_major" />

    <TextView
        android:id="@+id/venue_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/venue_major"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/venue_location" />

    <TextView
        android:id="@+id/venue_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/venue_herenow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/venue_stats" />

    <TextView
        android:id="@+id/venue_herenow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/venue_herenow"
        android:layout_below="@+id/venue_location"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/go_mplaces_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_mplaces_check_in"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

</RelativeLayout>